--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,15 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cSpell.enabled": true,
+  "cSpell.words": [
+    "actx",
+    "adsr",
+    "AUDIOVIEW",
+    "Clazz",
+    "gctx",
+    "jsmediatags",
+    "localfile",
+    "Relayout"
+  ]
 }
